--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-language.service.key = a68f27cd48eb4e2d9ff095f84f646828
-language.service.endpoint = https://langdemo.cognitiveservices.azure.us/
+language.service.key = xxx
+language.service.endpoint = https://xxx
